feat(web): add zenvia provider

--- a/packages/application-generic/package.json
+++ b/packages/application-generic/package.json
@@ -111,6 +111,7 @@
     "@novu/termii": "^0.22.0",
     "@novu/testing": "^0.22.0",
     "@novu/twilio": "^0.22.0",
+    "@novu/zenvia": "^0.22.0",
     "@novu/zulip": "^0.22.0",
     "@novu/nexmo": "^0.22.0",
     "@sentry/node": "^7.12.1",
