--- a/packages/application-generic/package.json
+++ b/packages/application-generic/package.json
@@ -112,6 +112,7 @@
     "@novu/testing": "^0.22.0",
     "@novu/twilio": "^0.22.0",
     "@novu/zenvia": "^0.22.0",
+    "@novu/twilio-whatsapp": "^0.22.0",
     "@novu/zulip": "^0.22.0",
     "@novu/nexmo": "^0.22.0",
     "@sentry/node": "^7.12.1",
