--- a/providers/twilio/package.json
+++ b/providers/twilio/package.json
@@ -45,8 +45,7 @@
   },
   "dependencies": {
     "@novu/stateless": "^0.22.0",
-    "twilio": "^4.19.3",
-    "axios": "^1.3.3"
+    "twilio": "^4.19.3"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.2",
